# st-formatter

./: CMakeLists.txt
examples/: example1.txt  example2.txt
src/: formatter.cpp  formatter.hpp  main.cpp
